@@ -27,27 +27,32 @@ Config:
 - user_agent_conditional (bool, optional, default false)
     Only preserve the http_user_agent value if transform is enabled and fails.
 
+- payload_keep (bool, optional, default false)
+    Always preserve the original log line in the message payload.
+
 *Example Heka Configuration*
 
 .. code-block:: ini
 
-    [FxaNginxAccessDecoder]
+    [CombinedLogDecoder]
     type = "SandboxDecoder"
     script_type = "lua"
     filename = "lua_decoders/nginx_access.lua"
 
-    [FxaNginxAccessDecoder.config]
-    log_format = '$remote_addr - $remote_user [$time_local] "$request" $status $body_bytes_sent "$http_referer" "$http_user_agent" "$http_x_forwarded_for"'
+    [CombinedLogDecoder.config]
+    type = "combined"
     user_agent_transform = true
+    # combined log format
+    log_format = '$remote_addr - $remote_user [$time_local] "$request" $status $body_bytes_sent "$http_referer" "$http_user_agent"'
 
 *Example Heka Message*
 
 :Timestamp: 2014-01-10 07:04:56 -0800 PST
-:Type: logfile
-:Hostname: trink-x230
+:Type: combined
+:Hostname: test.example.com
 :Pid: 0
 :UUID: 8e414f01-9d7f-4a48-a5e1-ae92e5954df5
-:Logger: FxaNginxAccessInput
+:Logger: TestWebserver
 :Payload:
 :EnvVersion:
 :Severity: 7
@@ -71,10 +76,12 @@ local msg_type      = read_config("type")
 local uat           = read_config("user_agent_transform")
 local uak           = read_config("user_agent_keep")
 local uac           = read_config("user_agent_conditional")
+local payload_keep  = read_config("payload_keep")
 
 local msg = {
 Timestamp   = nil,
 Type        = msg_type,
+Payload     = nil,
 Fields      = nil
 }
 
@@ -87,6 +94,10 @@ function process_message ()
 
     msg.Timestamp = fields.time
     fields.time = nil
+
+    if payload_keep then
+        msg.Payload = log
+    end
 
     if fields.http_user_agent and uat then
         fields.user_agent_browser,
