@@ -16,6 +16,9 @@ Bug Handling
 Features
 --------
 
+* Added the ability to preserve the webserver log line in message payload 
+  (issue #784)
+
 * Added the optional 'pid_file' configuration setting (issue #777).
 
 * Add anomaly, alert, annotation modules (issue #677)
